@@ -2373,4 +2373,45 @@ public void testBug560893_007() {
 		"Cannot make a static reference to the non-static field nsi\n" +
 		"----------\n");
 }
+@SuppressWarnings({ "unchecked", "rawtypes" })
+public void testBug558718_001() {
+	Map options = getCompilerOptions();
+	options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);
+	this.runNegativeTest(
+	new String[] {
+			"X.java",
+			"record R() {}\n",
+		},
+		"----------\n" + 
+		"1. ERROR in X.java (at line 1)\n" + 
+		"	record R() {}\n" + 
+		"	^^^^^^\n" + 
+		"record is a preview feature and disabled by default. Use --enable-preview to enable\n" +
+		"----------\n",
+		null,
+		true,
+		options
+	);
+}
+@SuppressWarnings({ "unchecked", "rawtypes" })
+public void testBug558718_002() {
+	Map options = getCompilerOptions();
+	options.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_13);
+	options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.DISABLED);	
+	this.runNegativeTest(
+	new String[] {
+			"X.java",
+			"record R() {}\n",
+		},
+		"----------\n" + 
+		"1. ERROR in X.java (at line 1)\n" + 
+		"	record R() {}\n" + 
+		"	^^^^^^\n" + 
+		"The preview feature record is only available with source level 14 and above\n" +
+		"----------\n",
+		null,
+		true,
+		options
+	);
+}
 }
